syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TransactionProto";

service TransactionService {
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse);
}

message CreateTransactionRequest {
  int64 telegramId = 1;
  double amount = 2;
  optional string description = 3;
  optional string categoryUuid = 4;
  optional string bankAccountUuid = 5;
  optional string currency = 6;
}

message CreateTransactionResponse {
  string transactionUuid = 1;
  double amount = 2;
  string currency = 3;
  double bankAccountBalanceInUsd = 4;
  string categoryUuid = 5;
  string categoryTitle = 6;
  optional string categoryEmoji = 7;
  string bankAccountUuid = 8;
  string bankAccountTitle = 9;
  optional string bankAccountEmoji = 10;
  optional string description = 11;
}